# fraud_detection

./: .gitignore  EDA.ipynb  README.md  analysis.ipynb  calculate_metrics.py  data_prep.py  demonstrative_data.csv  dim_selection.sh  predict.py  pretrain_embeddings.py  pyproject.toml  readme.md  search_hyperparams.py  train.py  utils.py  xgb.py
configs/: cnn.jsonnet  cnn_features.jsonnet  fraud_glove.yml  fraud_word2vec.yml  gru.jsonnet  gru_features.jsonnet  lstm.jsonnet  lstm_features.jsonnet  swem_mean.jsonnet  swem_mean_features.jsonnet  transformer.jsonnet  transformer_features.jsonnet  transformer_no_positional.jsonnet
configs/common/: basic.jsonnet  loader.jsonnet  trainer.jsonnet
configs/directory/: rnn_optuna.jsonnet
data/: word2vec_treatments_100.txt  word2vec_treatments_50.txt  word2vec_types_100.txt  word2vec_types_300.txt  word2vec_types_50.txt
experiments/: config.yaml
fraud/: __init__.py  model.py  predictor.py  reader.py  run_optuna.py  utils.py
model/: input_fn.py  model_fn.py  utils.py
notebooks/: hyperparams_analysis.ipynb  model_prediction.ipynb
